// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector acp --help 1`] = `
"vector acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --unsecured    explicitly allow a network listener without a password
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: vector.local)
                                                                  [string] [default: "vector.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector mcp --help 1`] = `
"vector mcp

manage MCP (Model Context Protocol) servers

Commands:
  vector mcp add [name]     add an MCP server
  vector mcp list           list MCP servers and their status                          [aliases: ls]
  vector mcp auth [name]    authenticate with an OAuth-enabled MCP server
  vector mcp logout [name]  remove OAuth credentials for an MCP server
  vector mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector attach --help 1`] = `
"vector attach <url>

attach to a running vector server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to VECTOR_SERVER_PASSWORD)              [string]
  -u, --username      basic auth username (default: VECTOR_SERVER_USERNAME or vector)       [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector run --help 1`] = `
"vector run [message..]

run vector with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running vector server (e.g., http://localhost:4096)        [string]
  -p, --password     basic auth password (defaults to VECTOR_SERVER_PASSWORD)               [string]
  -u, --username     basic auth username (default: VECTOR_SERVER_USERNAME or vector)        [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector debug --help 1`] = `
"vector debug

debugging and troubleshooting tools

Commands:
  vector debug config        show resolved configuration
  vector debug lsp           LSP debugging utilities
  vector debug rg            ripgrep debugging utilities
  vector debug file          file system debugging utilities
  vector debug scrap         list all known projects
  vector debug skill         list all available skills
  vector debug snapshot      snapshot debugging utilities
  vector debug startup       print startup timing
  vector debug agent <name>  show agent configuration details
  vector debug v2            debug v2 catalog and built-in plugins
  vector debug info          show debug information
  vector debug paths         show global paths (data, config, cache, state)
  vector debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector providers --help 1`] = `
"vector providers

manage AI providers and credentials

Commands:
  vector providers list               list providers and credentials                   [aliases: ls]
  vector providers login [url]        log in to a provider
  vector providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector agent --help 1`] = `
"vector agent

manage agents

Commands:
  vector agent create  create a new agent
  vector agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector upgrade --help 1`] = `
"vector upgrade [target]

upgrade vector to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use              [string] [choices: "npm", "pnpm", "bun"]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector uninstall --help 1`] = `
"vector uninstall

uninstall vector and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector serve --help 1`] = `
"vector serve

starts a headless vector server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --unsecured    explicitly allow a network listener without a password
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: vector.local)
                                                                  [string] [default: "vector.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector web --help 1`] = `
"vector web

start vector server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --unsecured    explicitly allow a network listener without a password
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: vector.local)
                                                                  [string] [default: "vector.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector models --help 1`] = `
"vector models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the model catalog from the configured mirror                   [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector stats --help 1`] = `
"vector stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector export --help 1`] = `
"vector export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector import --help 1`] = `
"vector import <file>

import session data from a local JSON file

Positionals:
  file  path to a local JSON file                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector github --help 1`] = `
"vector github

manage GitHub agent

Commands:
  vector github install  install the GitHub agent
  vector github run      run the GitHub agent
  vector github review   review a pull request and post the results

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector pr --help 1`] = `
"vector pr <number>

fetch and checkout a GitHub PR branch, then run Vector

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector review --help 1`] = `
"vector review

Vectorscope: review your branch, uncommitted changes or a pull request

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --base          branch or commit to compare with (default: the merge-base with origin's
                      default branch)                                                       [string]
      --uncommitted   review changes you have not committed, untracked files included      [boolean]
      --staged        review only staged changes                                           [boolean]
      --pr            review pull request <n> from origin without checking it out           [number]
      --post          post the review to the pull request (with --pr)                      [boolean]
      --yes           answer yes to confirmation questions                                 [boolean]
      --json          print { version, target, outcome } as JSON                           [boolean]
      --model         model to review with, as provider/model                               [string]
      --security      always run the security reviewer (--no-security: never)              [boolean]
      --max-comments  findings listed in detail, 0 to 50 (default 10)                       [number]
      --min-severity  lowest severity listed in detail (default concern)
                                                    [string] [choices: "blocking", "concern", "nit"]
      --max-cost      stop the review at this many US dollars; 0 for no limit               [number]
      --fail-on       exit 1 while findings of this severity or above are open
                                                  [string] [choices: "blocking", "concern", "never"]
      --checks        let the reviewer run your tests and typecheck                        [boolean]
      --full          review the whole change again, ignoring the last local review        [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector session --help 1`] = `
"vector session

manage sessions

Commands:
  vector session list                list sessions
  vector session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector plugin --help 1`] = `
"vector plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector db --help 1`] = `
"vector db

database tools

Commands:
  vector db [query]     open an interactive sqlite3 shell or run a query                   [default]
  vector db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector mcp list --help 1`] = `
"vector mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector mcp add --help 1`] = `
"vector mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector mcp auth --help 1`] = `
"vector mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  vector mcp auth list  list OAuth-capable MCP servers and their auth status           [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector mcp logout --help 1`] = `
"vector mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector providers list --help 1`] = `
"vector providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector providers login --help 1`] = `
"vector providers login [url]

log in to a provider

Positionals:
  url  vector auth provider                                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector providers logout --help 1`] = `
"vector providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector agent create --help 1`] = `
"vector agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector agent list --help 1`] = `
"vector agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector session list --help 1`] = `
"vector session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector session delete --help 1`] = `
"vector session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector github install --help 1`] = `
"vector github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector github run --help 1`] = `
"vector github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector github review --help 1`] = `
"vector github review

review a pull request and post the results

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub event JSON to review instead of the Actions event                [string]
      --pr          pull request number to review                                           [number]
      --dry-run     print every write as JSON instead of posting it                        [boolean]"
`;

exports[`vector CLI help-text snapshots every documented command emits stable help text: vector db path --help 1`] = `
"vector db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
